# awsomeutils

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
awsomeutils/: email.py  s3.py  safe_kwargs.py  security_group.py  step_functions.py
tests/: requirements.txt  test_email.py  test_s3.py  test_safe_kwargs.py  test_security_group.py  test_step_functions.py
