[metadata]
name = awsomeutils
version = 0.0.1
author = Alisson Palmeira and Diego Moreira
author_email = alisson.palmeira@gmail.com and diego@khartes.com.br
description = AWS some utils lambda layer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/khartes/awsomeutils
project_urls =
    Bug Tracker = https://github.com/khartes/awsomeutils/issues
keywords = etl, aws, utils
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Utilities

[options]
packages = awsomeutils
python_requires = >=3.6
install_requires = 
    cerberus == 1.3.4